--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Realm of Uz"]
 license = "Apache-2.0"
+description = "A better TokenStream for procedural macros."
 repository = "https://github.com/realmofuz/token_stream2"
 keywords = ["macros", "syn"]
 categories = ["development-tools::procedural-macro-helpers"]
